# munehisa-investment-simulator

./: .claudeignore  .gitignore  CONTRIBUTING.md  LICENCE  README.md  docker-compose.yml
.claude/: settings.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  data-service-ci.yml  deploy-frontend.yml  frontend-ci.yml
src/backend/: .env.example  pom.xml
src/data-service/: .env.example  README.md  pyproject.toml
src/data-service/data_service/: config.py  exceptions.py  main.py  security.py
src/data-service/data_service/routes/: assets.py  exchange.py  inflation.py
src/data-service/data_service/schemas/: asset.py  error.py  exchange.py  inflation.py
src/data-service/data_service/services/: bcb_inflation_client.py  fred_inflation_client.py  yfinance_client.py  yfinance_exchange_client.py
src/data-service/tests/: conftest.py  test_assets_route.py  test_bcb_inflation_client.py  test_exchange_route.py  test_fred_inflation_client.py  test_inflation_route.py  test_yfinance_client.py  test_yfinance_exchange_client.py
src/data-service/tests/fixtures/: bcb_sgs.py  fred_cpi.py  yfinance_history.py
src/data-service/tests/live/: test_live_asset_endpoint.py  test_live_exchange_endpoint.py  test_live_inflation_endpoint.py  test_live_usd_inflation_endpoint.py
src/frontend/: .env.example  DESIGN.md  Dockerfile  README.md  package-lock.json  package.json  react-router.config.ts  vite.config.ts  vitest.config.ts
src/frontend/app/: app.css  root.tsx  routes.ts
src/frontend/app/components/: AuthShell.tsx  ProtectedRoute.test.tsx  (+2 more)
(+96 files in other folders)
