[project]
name = "data-service"
version = "0.1.0"
description = "Munehisa Investment Simulator - Python data-fetching microservice (third-party market data, no caching/persistence)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi==0.118.0",
    "uvicorn[standard]==0.37.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "yfinance==0.2.66",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pandas-stubs==2.2.3.241126",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_service*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "live: hits the real yfinance/Yahoo Finance API over the network; excluded by default, run explicitly with `pytest -m live`",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
implicit_reexport = true
